fix(Card.module.scss): update button styles for improved visibility and consistency

--- a/src/app/components/Cards/Products/Card.module.scss
+++ b/src/app/components/Cards/Products/Card.module.scss
@@ -68,10 +68,10 @@
   .card__btn {
     cursor: pointer;
     margin-top: -20px;
-    font-weight: 600;
+    font-weight: 700;
     background: #6f3bb4;
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: 0.5rem 2rem;
     border-radius: 2rem;
     -webkit-border-radius: 2rem;
